remove $bp-xl width to avoid 2 to 3 items per row jump (convert width to margin at somre point)

--- a/assets/css/0-tools/vars.sass
+++ b/assets/css/0-tools/vars.sass
@@ -68,7 +68,7 @@ $card-margin-base: 2em
 		width: 85vw
 	@media(min-width: $bp-large)
 		width: 92vw
-	@media(min-width: $bp-xl)
+	// @media(min-width: $bp-xl)
 		width: 85vw
 
 @mixin margin-bottom-home
